# swagger.json
@@ -7,11 +7,8 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080/"
+      "url": "http://localhost:8080"
     }
-  ],
-  "tags": [
-    "CRUD"
   ],
   "paths": {
     "/api/users/login": {
@@ -21,31 +18,31 @@
         "consumes": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "password": {
-                  "type": "string"
-                },
-                "email": {
-                  "type": "string"
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "password": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  }
                 }
+              },
+              "example": {
+                "email": "slavasgod@gmail.com",
+                "password": "123123123"
               }
-            },
-            "example": {
-              "email": "universezxcv@gmail.com",
-              "password": "123123123"
             },
             "required": [
               "username",
               "password"
             ]
           }
-        ],
+        },
         "responses": {
           "200": {
             "description": "Return token",
@@ -71,47 +68,47 @@
     "/api/users/registration": {
       "post": {
         "name": "Registration",
-        "summary": "Registr  a user",
+        "summary": "Register  a user",
         "consumes": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "type": "string"
-                },
-                "lastName": {
-                  "type": "string"
-                },
-                "password": {
-                  "type": "string"
-                },
-                "confirmPassword": {
-                  "type": "string"
-                },
-                "email": {
-                  "type": "string"
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "firstName": {
+                    "type": "string"
+                  },
+                  "lastName": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  },
+                  "confirmPassword": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  }
                 }
+              },
+              "example": {
+                "email": "universezxcv@gmail.com",
+                "password": "123123123",
+                "confirmPassword": "123123123",
+                "firstName": "Artem",
+                "lastName": "Kashin"
               }
-            },
-            "example": {
-              "email": "universezxcv@gmail.com",
-              "password": "123123123",
-              "confirmPassword": "123123123",
-              "firstName": "Artem",
-              "lastName": "Kashin"
             },
             "required": [
               "username",
               "password"
             ]
           }
-        ],
+        },
         "responses": {
           "200": {
             "description": "Return token",
@@ -174,7 +171,7 @@
     "/api/users/auth/linkedin": {
       "get": {
         "name": "Callback from linkein after login",
-        "summary": "Linkein request",
+        "summary": "Linkedin request",
         "responses": {
           "200": {
             "description": "Redirect to callback function"
@@ -185,7 +182,7 @@
     "/api/users/auth/linkedin/callback": {
       "get": {
         "name": "Callback from linkein after login",
-        "summary": "Linkein request",
+        "summary": "Linkedin request",
         "responses": {
           "200": {
             "description": "Return token",
@@ -208,7 +205,7 @@
         }
       }
     },
-    "/api/users/change-password": {
+    "/api/users/change-password/{userId}": {
       "put": {
         "name": "Change password",
         "summary": "Change user password",
@@ -217,25 +214,30 @@
         ],
         "parameters": [
           {
-            "name": "userId",
-            "in": "query",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "password": {
-                  "type": "string"
+            "in": "path",
+            "name": "userId"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "password": {
+                    "type": "string"
+                  }
                 }
+              },
+              "example": {
+                "password": "123123123"
               }
             },
-            "example": {
-              "password": "123123123"
-            },
             "required": [
-              "username",
               "password"
             ]
           }
-        ],
+        },
         "responses": {
           "200": {
             "description": "Success"
@@ -244,5 +246,6 @@
       }
     }
   },
-  "components": {}
+  "components": {},
+  "tags": []
 }
